Bizfi Production/src/objects/Sales_Rep_Report_Card__c.object
<CustomObject>
    <fields>
        <fullName>YTD_Agreement_Signed_to_Funded__c</fullName>
        <formula>IF(YTD_Agreement_Signed__c = 0,0, YTD_Fundings__c / YTD_Agreement_Signed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD - Agreement Signed to Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Approval_to_Agreement_Sent__c</fullName>
        <formula>IF(YTD_Approvals__c = 0,0, YTD_Agreement_Sent__c / YTD_Approvals__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD - Approval to Agreement Sent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Approvals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD - Approvals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Approvals_to_Funding__c</fullName>
        <formula>IF(YTD_Approvals__c = 0, 0 , YTD_Fundings__c/  YTD_Approvals__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD - Approvals to Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Apps_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD - Apps Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Apps_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD - Apps Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Apps_Sent_to_App_Received__c</fullName>
        <formula>IF(YTD_Apps_Sent__c = 0, 0 , YTD_Apps_Received__c /  YTD_Apps_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD - Apps Sent to App Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD - Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Fundings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD - Fundings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Lead__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD - Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Leads_to_Submission__c</fullName>
        <formula>IF(YTD_Lead__c =0,0,YTD_Total_Subs__c/  YTD_Lead__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD - Leads to Submission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Organic_Subs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD - Organic Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Subs_to_Approval__c</fullName>
        <formula>IF(YTD_Total_Subs__c = 0, 0 , YTD_Approvals__c/  YTD_Total_Subs__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD - Subs to Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Total_Subs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD - Total Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesterday_Agreement_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yesterday - Agreement Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesterday_Agreement_Sent_to_Funded__c</fullName>
        <formula>IF(Yesterday_Agreement_Sent__c= 0,0, Yesterday_Fundings__c/Yesterday_Agreement_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yesterday - Agreement Sent to Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yesterday_Agreement_Sent_to_Signed__c</fullName>
        <formula>IF( Yesterday_Agreement_Sent__c  = 0,0,Yesterday_Agreement_Signed__c/ Yesterday_Agreement_Sent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yesterday - Agreement Sent to Signed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yesterday_Agreement_Signed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yesterday - Agreement Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesterday_Agreement_Signed_to_Funded__c</fullName>
        <formula>IF(Yesterday_Agreement_Signed__c= 0,0,Yesterday_Fundings__c/Yesterday_Agreement_Signed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yesterday - Agreement Signed to Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yesterday_Approval_to_Agreement_Sent__c</fullName>
        <formula>IF(Yesterday_Approvals__c= 0,0,Yesterday_Agreement_Sent__c/Yesterday_Approvals__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yesterday - Approval to Agreement Sent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yesterday_Approvals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yesterday - Approvals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesterday_Approvals_to_Funding__c</fullName>
        <formula>IF(  Yesterday_Approvals__c   = 0, 0 , Yesterday_Fundings__c  / Yesterday_Approvals__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yesterday - Approvals to Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yesterday_Apps_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yesterday - Apps Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesterday_Apps_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yesterday - Apps Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesterday_Apps_Sent_to_App_Received__c</fullName>
        <formula>IF( Yesterday_Apps_Sent__c  = 0, 0 , Yesterday_Apps_Received__c  / Yesterday_Apps_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yesterday - Apps Sent to App Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yesterday_Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yesterday - Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesterday_Fundings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yesterday - Fundings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesterday_Lead__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yesterday - Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesterday_Leads_to_Submission__c</fullName>
        <formula>IF(Yesterday_Lead__c =0,0,Yesterday_Total_Subs__c / Yesterday_Lead__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yesterday - Leads to Submission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yesterday_Organic_Subs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yesterday - Organic Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesterday_Subs_to_Approval__c</fullName>
        <formula>IF( Yesterday_Total_Subs__c = 0, 0 ,  Yesterday_Approvals__c /  Yesterday_Total_Subs__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yesterday - Subs to Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yesterday_Total_Subs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yesterday - Total Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>Scorecards History</description>
        <gracePeriodDays>1</gracePeriodDays>
    </historyRetentionPolicy>
    <label>Sales Rep Scorecard</label>
    <listViews>
        <fullName>Agent_Workload</fullName>
        <columns>NAME</columns>
        <columns>Sales_Rep_Role__c</columns>
        <columns>Sales_Rep_Workload_Hours__c</columns>
        <columns>Sales_Rep_Maximum_Workload_Hours__c</columns>
        <columns>Lead_Average_Min__c</columns>
        <columns>Application_Out_Average_Min__c</columns>
        <columns>Application_Missing_Info_Average_Min__c</columns>
        <columns>Application_In_Average_Min__c</columns>
        <columns>Underwriting_Average_Min__c</columns>
        <columns>Approved_Average_Min__c</columns>
        <columns>Agreement_Sent_Average_Min__c</columns>
        <columns>Agreement_Signed_Average_Min__c</columns>
        <filterScope>Everything</filterScope>
        <label>Agent Workload</label>
        <language>en_US</language>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Agent_Workload_Count</fullName>
        <columns>NAME</columns>
        <columns>Lead_Count__c</columns>
        <columns>Application_Out_Count__c</columns>
        <columns>Application_Missing_Info_Count__c</columns>
        <columns>Application_In_Count__c</columns>
        <columns>Underwriting_Count__c</columns>
        <columns>Agreement_Sent_Count__c</columns>
        <columns>Agreement_Signed_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>Agent Workload Count</label>
        <language>en_US</language>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MTD_Score__c</columns>
        <columns>Agreement_Sent_Average_Min__c</columns>
        <columns>Pass_Fail_Indicator__c</columns>
        <columns>Submissions_Today__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Rep Scorecards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>